--- a/.github/workflows/api-publish.yml
+++ b/.github/workflows/api-publish.yml
@@ -18,4 +18,4 @@ jobs:
           GITHUB_USERNAME: x-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:
-          gradle openap:publish
+          gradle openapi:publish
