--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
   title: "TriReg2 API"
-  description: "An OpenAPI specification for a time registration"
+  description: "An OpenAPI specification for time registrations"
   version: "@VERSION@"
 servers:
   - url: "http://0.0.0.0:8080"
