--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,6 +14,6 @@ jobs:
        - uses: actions/checkout@v4
          
        # Run Spectral and lint the OpenAPI file(s)
-       - uses: stoplightio/spectral-action@v1
+       - uses: stoplightio/spectral-action@latest
          with:
            file_glob: "openapi/trireg2.yaml"
