Add some minor descriptions

--- a/openapi/schemas/ImportRegistrationResponse.yaml
+++ b/openapi/schemas/ImportRegistrationResponse.yaml
@@ -6,5 +6,7 @@ items:
       type: "string"
     status:
       type: "string"
+      description: "Describes the status of the registration (SUCCESS, PENDING, FAILED)"
     message:
+      description: "When the status = FAILED, this will provide a description of the problem"
       type: "string"
