--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -2,18 +2,20 @@ openapi: "3.0.3"
 info:
   title: "TriReg2 API"
   description: "An OpenAPI specification for time registrations"
-  version: "0.0.5"
+  version: "0.0.6"
 servers:
-  - url: "http://0.0.0.0:8080"
+- url: "http://0.0.0.0:8080"
 paths:
-  /login/:
+  /login:
     $ref: login.yaml
-  /time-registration/:
+  /time-registration:
     $ref: time-registration.yaml
-  /export/:
+  /export:
     $ref: export.yaml
-  /tag/:
+  /tag:
     $ref: tagging.yaml
+  /import:
+    $ref: import.yaml
 components:
   securitySchemes:
     openId:
@@ -28,6 +30,6 @@ components:
     TimeRegistrationResponse:
       $ref: "./schemas/TimeRegistrationResponse.yaml"
 security:
-  - openId:
-      - openid
-  - basicAuth: []
+- openId:
+  - openid
+- basicAuth: []
