--- a/openapi/schemas/TagConfigurationResponse.yaml
+++ b/openapi/schemas/TagConfigurationResponse.yaml
@@ -6,9 +6,13 @@ items:
       type: "string"
     tagConfigurationName:
       type: "string"
+      description: "The name of the tag configuration"
     tagValueType:
       type: "string"
       description: "Describes the value type of the tag."
+    tagDefaultValue:
+      type: "string"
+      description: "The default value to use when no other value is specified when tagging a time registration"
     tagTaskRelation:
       type: "string"
       description: "Specifies the relation to the task. For example, whether the tag is optional or mandatory"
