--- a/openapi/time-registration.yaml
+++ b/openapi/time-registration.yaml
@@ -38,3 +38,45 @@ post:
               value: "Time registered successfully"
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
+put:
+  tags:
+    - "Time registration"
+  operationId: "updateTimeRegistrationForUser"
+  description: "Updates the specified time registration"
+  parameters:
+    - name: "timeRegistrationId"
+      in: "query"
+      description: "The id of the time registration to update"
+      required: true
+      schema:
+        type: "string"
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: "./schemas/TimeRegistrationUpdateRequest.yaml"
+  responses:
+    "200":
+      description: "Updated"
+      content:
+        text/plain:
+          schema:
+            type: "string"
+          examples:
+            Success:
+              value: "Time updated successfully"
+    "400":
+      description: "Bad update request"
+      content:
+        text/plain:
+          schema:
+            type: "string"
+    "401":
+      $ref: "./responses/UnauthorizedError.yaml"
+    "404":
+      description: "Time registration not found"
+      content:
+        text/plain:
+          schema:
+            type: "string"
