--- a/openapi/tagConfiguration.yaml
+++ b/openapi/tagConfiguration.yaml
@@ -27,3 +27,21 @@ get:
       $ref: "./responses/UnauthorizedError.yaml"
     "404":
       description: "Unable to find tag configurations for the specified task (Task does not exist)"
+post:
+  tags:
+    - "TagConfigurations"
+    - "Admin"
+  operationId: "createTagConfiguration"
+  description: "Creates a new tag configuration"
+  requestBody:
+    content:
+      application/json:
+        schema:
+          $ref: "./schemas/admin/TagConfigurationCreateRequest.yaml"
+  responses:
+    "200":
+      description: "The tag configuration was successfully created"
+      content:
+        text/plain:
+          schema:
+            type: "string"
