Remove tags confusing the Kotlin plugin

--- a/openapi/tagTaskMapping.yaml
+++ b/openapi/tagTaskMapping.yaml
@@ -1,5 +1,8 @@
 post:
-  description: ""
+  tags:
+    - "TagTaskMapping"
+  operationId: "createNewTagTaskMapping"
+  description: "Creates a new relation between a task and a tag configuration"
   requestBody:
     content:
       application/json:
