--- a/openapi/schemas/admin/TagTaskMappingCreateRequest.yaml
+++ b/openapi/schemas/admin/TagTaskMappingCreateRequest.yaml
@@ -2,13 +2,13 @@ type: "object"
 required: ["tagConfigurationId", "taskId", "relation"]
 properties:
   tagConfigurationId:
-    type: string
+    type: "string"
   taskId:
-    type: string
+    type: "string"
   relation:
-    type: string
+    type: "string"
     description: "The type of relation between the task and tag."
   defaultValue:
-    type: string
+    type: "string"
     default: ""
-    description: "The default value"
+    description: "The default value to use when adding the tag to a tag configuration"
