--- a/openapi/tasks.yaml
+++ b/openapi/tasks.yaml
@@ -4,7 +4,7 @@ get:
   operationId: "getTasksForUser"
   description: "Gets the tasks available to the user"
   parameters:
-    - name: "user"
+    - name: "userId"
       in: "query"
       description: "The id of the user to get tasks for (Default is calling user)"
       required: false
@@ -23,7 +23,7 @@ post:
   tags:
     - "Tasks"
   operationId: "createNewTask"
-  description: "Creates a new task"
+  description: "Create a new task"
   requestBody:
     required: true
     content:
@@ -36,9 +36,57 @@ post:
       content:
         text/plain:
           schema:
-            type: string
+            type: "string"
           examples:
             Success:
               value: "Successfully created task"
+    "400":
+      description: "Request contains invalid data and the task was not created"
+      content:
+        text/plain:
+          schema:
+            type: "string"
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
+put:
+  tags:
+    - "Tasks"
+  operationId: "updateTask"
+  description: "Updates an existing task"
+  parameters:
+    - name: "taskId"
+      in: "query"
+      description: "The id of the task to update"
+      required: true
+      schema:
+        type: "string"
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: "./schemas/admin/TaskCreateRequest.yaml"
+  responses:
+    "200":
+      description: "Successfully updated the task"
+      content:
+        text/plain:
+          schema:
+            type: "string"
+          examples:
+            Success:
+              value: "Successfully updated task"
+    "400":
+      description: "Request contains invalid data and the task was not updated"
+      content:
+        text/plain:
+          schema:
+            type: "string"
+    "401":
+      $ref: "./responses/UnauthorizedError.yaml"
+    "404":
+      description: "The specified task was not found"
+      content:
+        text/plain:
+          schema:
+            type: "string"
