--- a/openapi/schemas/TimeRegistrationResponse.yaml
+++ b/openapi/schemas/TimeRegistrationResponse.yaml
@@ -1,7 +1,7 @@
 type: "object"
-required: ["registrationId", "registered", "userId", "taskId", "date", "duration", "status"]
+required: ["timeRegistrationId", "registered", "userId", "taskId", "date", "duration", "status"]
 properties:
-  registrationId:
+  timeRegistrationId:
     type: "string"
   registered:
     type: "integer"
