--- a/openapi/tagging.yaml
+++ b/openapi/tagging.yaml
@@ -5,7 +5,7 @@ get:
   description: "Gets the tags associated with the given time registration"
   parameters:
     - in: query
-      name: "registrationId"
+      name: "timeRegistrationId"
       schema:
         type: "string"
       required: true
@@ -22,7 +22,7 @@ get:
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
     "404":
-      description: "Unable to find a time registration with the specified registrationId"
+      description: "Unable to find a time registration with the specified timeRegistrationId"
     "502":
       $ref: "./responses/BadGateway.yaml"
 post:
