added schema file for Tag

--- a/openapi/schemas/ImportRegistrationRequest.yaml
+++ b/openapi/schemas/ImportRegistrationRequest.yaml
@@ -12,11 +12,4 @@ items:
     duration:
       $ref: Duration.yaml
     tags:
-      type: "array"
-      items:
-        required: ["tagConfigurationId"]
-        properties:
-          tagConfigurationId:
-            type: "string"
-          value:
-            type: "string"
+      $ref: Tag.yaml
