--- a/openapi/schemas/TimeRegistrationRequest.yaml
+++ b/openapi/schemas/TimeRegistrationRequest.yaml
@@ -9,11 +9,5 @@ properties:
   duration:
     $ref: Duration.yaml
   tags:
-    type: "array"
-    items:
-      required: ["tagConfigurationId"]
-      properties:
-        tagConfigurationId:
-          type: "string"
-        value:
-          type: "string"
+    $ref: Tag.yaml
+   
