Change import response (#30)
* Change import response

* name fix

* Update ImportRegistrationResponse.yaml

--- a/openapi/schemas/ImportRegistrationResponse.yaml
+++ b/openapi/schemas/ImportRegistrationResponse.yaml
@@ -2,11 +2,11 @@ type: "array"
 items:
   required: ["timeRegistrationId", "status"]
   properties:
-    registrationId:
+    timeRegistrationId:
       type: "string"
     status:
       type: "string"
       description: "Describes the status of the registration (SUCCESS, PENDING, FAILED)"
     message:
-      description: "When status = FAILED, this will provide a description of the problem"
+      description: "Provides a description of the status"
       type: "string"
