--- a/openapi/active-task-registrations.yaml
+++ b/openapi/active-task-registrations.yaml
@@ -11,8 +11,8 @@ get:
       schema:
         type: string
         format: "date"
-    - name: "duration"
-      description: "The duration type to use when deciding which time period tasks are considered active"
+    - name: "period"
+      description: "The period type to use when deciding which time period tasks are considered active"
       in: query
       required: false
       schema:
@@ -33,5 +33,11 @@ get:
         application/json:
           schema:
             $ref: "./schemas/GetTimeRegistrationsByTaskRequest.yaml"
+    "400":
+      description: "Request contains an invalid period value"
+      content:
+        text/plain:
+          schema:
+            type: string
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
