--- a/openapi/schemas/ImportRegistrationRequest.yaml
+++ b/openapi/schemas/ImportRegistrationRequest.yaml
@@ -12,4 +12,6 @@ items:
     duration:
       $ref: Duration.yaml
     tags:
-      $ref: Tag.yaml
+      type: array
+      items:
+        $ref: Tag.yaml
