added schema file for Tag (#29)
* added schema file for Tag

* changes after code review

--- a/openapi/schemas/TimeRegistrationRequest.yaml
+++ b/openapi/schemas/TimeRegistrationRequest.yaml
@@ -9,11 +9,8 @@ properties:
   duration:
     $ref: Duration.yaml
   tags:
-    type: "array"
+    type: array
     items:
-      required: ["tagConfigurationId"]
-      properties:
-        tagConfigurationId:
-          type: "string"
-        value:
-          type: "string"
+      $ref: Tag.yaml
+    
+   
