Lint warnings - test fix?

--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -5,6 +5,9 @@ info:
   version: "0.1.1"
 servers:
 - url: "http://0.0.0.0:8080"
+tags:
+  - name: "Time registration"
+    description: "Tag for CRUD operations related to time registrations"
 paths:
   /login:
     $ref: login.yaml
