--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -2,12 +2,31 @@ openapi: "3.0.3"
 info:
   title: "TriReg2 API"
   description: "An OpenAPI specification for time registrations"
-  version: "0.1.1"
+  version: "0.1.2"
+  contact:
+    name: "TBD"
+  license:
+    name: "TBD"
+    url: "TBD"
 servers:
 - url: "http://0.0.0.0:8080"
 tags:
   - name: "Time registration"
     description: "Tag for CRUD operations related to time registrations"
+  - name: "TagConfiguration"
+    description: "Tag for CRUD operations related to the configuration of tags"
+  - name: "Tasks"
+    description: "Tag for CRUD operations related to the configuration tasks"
+  - name: "TagTaskMapping"
+    description: "Tag for CRUD operations related to the configuration of the relation between tasks and tag configurations"
+  - name: "Tagging"
+    description: "Tag for CRUD operations related to tagging time registrations"
+  - name: "Import"
+    description: "Tag for operations related to importing time registrations"
+  - name: "Export"
+    description: "Tag for operations related to exporting time registrations to an external system"
+  - name: "Login"
+    description: "Tag for operations related to logging into the service through a browser"
 paths:
   /login:
     $ref: login.yaml
@@ -37,12 +56,6 @@ components:
     basicAuth:
       type: http
       scheme: basic
-  schemas:
-    TimeRegistrationRequest:
-      $ref: "./schemas/TimeRegistrationRequest.yaml"
-    TimeRegistrationResponse:
-      $ref: "./schemas/TimeRegistrationResponse.yaml"
 security:
-- openId:
-  - openid
+- openId: []
 - basicAuth: []
