--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -5,7 +5,7 @@ info:
   version: "0.1.2"
   contact:
     name: "TBD"
-    email: "TBD"
+    email: "tbd@trifork.com"
     url: "https://github.com/trifork/trireg2-api"
   license:
     name: "TBD"
